[ZFS][VAULT] add zfs automatic install, add become passwords and ports to the vault

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,4 +1,4 @@
 [servers]
-raspberrypi ansible_host=192.168.1.203 ansible_user=ansible ansible_ssh_private_key_file=~/.ssh/id_rsa_vault
-server1 ansible_host=192.168.1.204 ansible_user=ansible ansible_ssh_private_key_file=~/.ssh/id_rsa_vault
-server2 ansible_host=192.168.1.201 ansible_user=ansible ansible_ssh_private_key_file=~/.ssh/id_rsa_vault
+raspberrypi ansible_host=192.168.1.203 ansible_user=ansible ansible_ssh_private_key_file="~/.ssh/id_rsa_vault" ansible_become_password="{{ ansible_become_password_raspberrypi }}"
+server1 ansible_host=192.168.1.204 ansible_user=ansible ansible_ssh_private_key_file="~/.ssh/id_rsa_vault" ansible_become_password="{{ ansible_become_password_server1 }}"
+server2 ansible_host=192.168.1.201 ansible_user=ansible ansible_ssh_private_key_file="~/.ssh/id_rsa_vault" ansible_become_password="{{ ansible_become_password_server2 }}"
